# kinto-wizard

./: .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTORS.rst  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: publish.yml  test.yml
kinto_wizard/: __main__.py  async_kinto.py  kinto2yaml.py  logger.py  validate.py  yaml2kinto.py
src/kinto_wizard/: __main__.py  async_kinto.py  kinto2yaml.py  logger.py  validate.py  yaml2kinto.py
tests/: kinto-full.yaml  kinto.ini  kinto.yaml  test_functional.py
tests/dumps/: dump-date.yaml  dump-full.yaml  dump-natim-toto-groups.yaml  dump-natim-toto.yaml  dump-natim.yaml  dump-toto-groups.yaml  dump-toto.yaml  with-attachments.yaml  with-groups.yaml  with-references.yaml  with-schema-1.yaml  with-schema-2.yaml  with-schema.yaml  wrong-schema.yaml
